# smx

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  utils.hpp
src/http/: common.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
src/smtp/: client.cpp  client.hpp  common.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp
